fixed overflow

--- a/src/Components/OurWork/ourwork.css
+++ b/src/Components/OurWork/ourwork.css
@@ -5,7 +5,7 @@
   /* margin-top: 100px; */
   padding: 0;
   font-size: clamp(2rem, 6vw, 4rem);
-  margin-bottom: 100px
+  margin-bottom: 100px;
 }
 
 
@@ -17,7 +17,7 @@
 }
 
 
-.carousel {
+/* .carousel {
     overflow: hidden;
     width: 100%;
   }
@@ -40,7 +40,7 @@
   
   .carousel:hover .carousel-track {
     animation-play-state: paused;
-  }
+  } */
 
 
   @media (max-width: 480px) {
